Dating and Place of Issue now show in the regest collapse on the reading page

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -570,3 +570,7 @@ div.transcription p {
     vertical-align: sub;
     font-size: smaller;
 }
+
+.regest_collapse_heading {
+    font-weight: bold;
+}
